[package]
name = "rc_engine"
version = "0.1.0"
authors = ["Jawa89 <38807412+camilchp@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.sdl2]
version = "0.32.1"
default-features = false
features = ["image"]
